--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,11 @@
 .link {
   @apply cursor-pointer hover:text-black transition-colors font-semibold;
 }
+
+.bg {
+  background-image: url("https://images.unsplash.com/photo-1537037124419-bdc2fa27f648?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
